syntax= "proto3";

option java_multiple_files = true;
option java_package = "wallet";

service WalletService {
  rpc CreateWallet (WalletRequest) returns (WalletResponse);
}

message WalletRequest{
  string customerId = 1;
  string name = 2;
  string email = 3;
}

message WalletResponse{
  string walletId = 1;
  string status = 2;
}
